--- a/notebooks/reproduce_quic.ipynb
+++ b/notebooks/reproduce_quic.ipynb
@@ -29,15 +29,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Downloading: \"https://liberouter.org/datazoo/download?bucket=cesnet-models&file=mmv2_CESNET_QUIC22_Week44.pth\" to C:\\Users\\janlu/.cache\\torch\\hub\\checkpoints\\mmv2_CESNET_QUIC22_Week44.pth\n",
-      "100%|██████████| 8.68M/8.68M [00:01<00:00, 7.66MB/s]\n"
+      "Downloading: \"https://liberouter.org/datazoo/download?bucket=cesnet-models&file=mmv2_CESNET_QUIC22_Week44.pth\" to models/mmv2_CESNET_QUIC22_Week44.pth\n",
+      "100%|██████████| 8.68M/8.68M [00:01<00:00, 7.68MB/s]\n"
      ]
     }
    ],
@@ -45,7 +45,8 @@
     "from cesnet_models.models import MM_CESNET_V2_Weights, mm_cesnet_v2\n",
     "\n",
     "pretrained_weights = MM_CESNET_V2_Weights.CESNET_QUIC22_Week44\n",
-    "model = mm_cesnet_v2(weights=pretrained_weights)"
+    "model = mm_cesnet_v2(weights=pretrained_weights, model_dir=\"models/\")\n",
+    "model.eval();"
    ]
   },
   {
@@ -65,24 +66,54 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[2024-04-08 12:55:38,417][cesnet_datazoo.pytables_data.indices_setup][INFO] - Processing test indices\n",
+      "[2024-04-08 12:55:39,009][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221107 took 0.55 seconds\n",
+      "[2024-04-08 12:55:39,585][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221108 took 0.58 seconds\n",
+      "[2024-04-08 12:55:40,139][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221109 took 0.55 seconds\n",
+      "[2024-04-08 12:55:40,646][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221110 took 0.51 seconds\n",
+      "[2024-04-08 12:55:41,014][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221111 took 0.37 seconds\n",
+      "[2024-04-08 12:55:41,178][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221112 took 0.16 seconds\n",
+      "[2024-04-08 12:55:41,385][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Reading app column for table /flows/D20221113 took 0.21 seconds\n",
+      "[2024-04-08 12:55:43,707][cesnet_datazoo.pytables_data.pytables_dataset][INFO] - Processing indices took 2.32 seconds\n"
+     ]
+    }
+   ],
    "source": [
+    "import logging\n",
+    "from cesnet_datazoo.config import AppSelection, DatasetConfig\n",
     "from cesnet_datazoo.datasets import CESNET_QUIC22\n",
-    "from cesnet_datazoo.config import DatasetConfig, AppSelection\n",
     "\n",
-    "dataset = CESNET_QUIC22(data_root=\"data/CESNET-QUIC22/\", size=\"XS\")\n",
+    "logging.basicConfig(\n",
+    "    level=logging.INFO,\n",
+    "    format=\"[%(asctime)s][%(name)s][%(levelname)s] - %(message)s\")\n",
+    "\n",
+    "DATASET_SIZE = \"XS\"\n",
+    "dataset = CESNET_QUIC22(data_root=\"data/CESNET-QUIC22\", size=DATASET_SIZE)\n",
     "\n",
     "dataset_config = DatasetConfig(\n",
     "    dataset=dataset,\n",
     "    test_period_name=\"W-2022-45\",\n",
+    "    test_workers=2,\n",
+    "    test_batch_size=16384,\n",
     "    ppi_transform=pretrained_weights.transforms[\"ppi_transform\"],\n",
     "    flowstats_transform=pretrained_weights.transforms[\"flowstats_transform\"],\n",
     "    flowstats_phist_transform=pretrained_weights.transforms[\"flowstats_phist_transform\"],\n",
     "    use_packet_histograms=pretrained_weights.meta[\"use_packet_histograms\"],\n",
+    "    use_tcp_features=pretrained_weights.meta[\"use_tcp_features\"],\n",
     "    apps_selection=AppSelection.FIXED,\n",
     "    apps_selection_fixed_known=pretrained_weights.meta[\"classes\"],\n",
     "    need_train_set=False,\n",
+    "    need_val_set=False,\n",
     "    return_tensors=True,)\n",
+    "\n",
+    "# Check that the model expects the same flow statistics features and PPI features as provided in the current configuration of the dataset\n",
+    "assert dataset_config.get_flowstats_feature_names_expanded() == pretrained_weights.meta[\"flowstats_features\"]\n",
+    "assert len(dataset_config.get_ppi_channels()) == pretrained_weights.meta[\"ppi_input_channels\"]\n",
     "\n",
     "dataset.set_dataset_config_and_initialize(dataset_config)\n",
     "test_dataloader = dataset.get_test_dataloader()"
@@ -92,7 +123,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Iterate over the test dataloader and use the model to compute predictions. Use a GPU if availalable."
+    "Iterate over the test dataloader and use the model to compute predictions. Use a GPU if available."
    ]
   },
   {
@@ -104,60 +135,62 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1247/1247 [00:36<00:00, 33.99it/s]\n"
+      "100%|██████████| 156/156 [00:45<00:00,  3.45it/s]\n"
      ]
     }
    ],
    "source": [
+    "import numpy as np\n",
     "import torch\n",
     "from torch import nn\n",
     "from torch.utils.data import DataLoader\n",
     "from tqdm import tqdm\n",
     "\n",
-    "def compute_model_predictions(model: nn.Module, test_dataloader: DataLoader, device) -> tuple[torch.Tensor, torch.Tensor]:\n",
+    "def compute_model_predictions(model: nn.Module, test_dataloader: DataLoader, device) -> tuple[np. ndarray, np.ndarray]:\n",
     "    model.eval()\n",
-    "    y_true = []\n",
-    "    y_pred = []\n",
+    "    test_labels = []\n",
+    "    preds = []\n",
     "    with torch.no_grad():\n",
     "        for _, batch_ppi, batch_flowstats, batch_labels in tqdm(test_dataloader, total=len(test_dataloader)):\n",
     "            batch_ppi, batch_flowstats, batch_labels = batch_ppi.to(device), batch_flowstats.to(device), batch_labels.to(device)\n",
     "            out = model((batch_ppi, batch_flowstats))\n",
-    "            preds = out.argmax(dim=1)\n",
-    "            y_true.append(batch_labels)\n",
-    "            y_pred.append(preds)\n",
-    "    y_true, y_pred = torch.cat(y_true).cpu(), torch.cat(y_pred).cpu()\n",
-    "    return y_true, y_pred\n",
+    "            batch_preds = out.argmax(dim=1)\n",
+    "            test_labels.append(batch_labels)\n",
+    "            preds.append(batch_preds)\n",
+    "    test_labels, preds = torch.cat(test_labels).cpu().numpy(), torch.cat(preds).cpu().numpy()\n",
+    "    return test_labels, preds\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = model.to(device)\n",
-    "y_true, y_pred = compute_model_predictions(model, test_dataloader, device=device)"
+    "test_labels, preds = compute_model_predictions(model, test_dataloader, device=device)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Finally, compute classification accuracy."
+    "Finally, compute the classification accuracy."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.8429\n"
+      "The pre-trained model achieved an accuracy of 0.86720 and a recall of 0.84085 on the CESNET-QUIC22-XS dataset of XS size.\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import accuracy_score, recall_score\n",
     "\n",
-    "accuracy = accuracy_score(y_true, y_pred)\n",
-    "print(f\"Accuracy: {accuracy:.4f}\")"
+    "accuracy = accuracy_score(test_labels, preds)\n",
+    "recall = recall_score(test_labels, preds, average=\"macro\")\n",
+    "print(f\"The pre-trained model achieved an accuracy of {accuracy:.5f} and a recall of {recall:.5f} on the {dataset.name} dataset of {DATASET_SIZE} size.\")"
    ]
   }
  ],
