--- a/notebooks/reproduce_quic.ipynb
+++ b/notebooks/reproduce_quic.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Use pre-trained neural network to reproduce published results\n",
+    "# Use a pre-trained neural network to reproduce published results\n",
     "\n",
     "Paper: *\"Encrypted traffic classification: the QUIC case\"*"
    ]
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -92,7 +92,7 @@
     "    level=logging.INFO,\n",
     "    format=\"[%(asctime)s][%(name)s][%(levelname)s] - %(message)s\")\n",
     "\n",
-    "DATASET_SIZE = \"XS\"\n",
+    "DATASET_SIZE = \"XS\" # Use the \"ORIG\" size for exact reproduction of the results\n",
     "dataset = CESNET_QUIC22(data_root=\"data/CESNET-QUIC22\", size=DATASET_SIZE)\n",
     "\n",
     "dataset_config = DatasetConfig(\n",
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,14 +174,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The pre-trained model achieved an accuracy of 0.86720 and a recall of 0.84085 on the CESNET-QUIC22-XS dataset of XS size.\n"
+      "The pre-trained model achieved an accuracy of 0.86720 and a recall of 0.84085 on the test period W-2022-45 of the CESNET-QUIC22-XS dataset.\n"
      ]
     }
    ],
@@ -190,7 +190,7 @@
     "\n",
     "accuracy = accuracy_score(test_labels, preds)\n",
     "recall = recall_score(test_labels, preds, average=\"macro\")\n",
-    "print(f\"The pre-trained model achieved an accuracy of {accuracy:.5f} and a recall of {recall:.5f} on the {dataset.name} dataset of {DATASET_SIZE} size.\")"
+    "print(f\"The pre-trained model achieved an accuracy of {accuracy:.5f} and a recall of {recall:.5f} on the test period {dataset_config.test_period_name} of the {dataset.name} dataset.\")"
    ]
   }
  ],
