--- a/notebooks/example_evaluation.ipynb
+++ b/notebooks/example_evaluation.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install cesnet_datazoo lightgbm scikit-learn matplotlib seaborn"
+    "!{sys.executable} -m pip install cesnet-datazoo lightgbm scikit-learn matplotlib seaborn"
    ]
   },
   {
