--- a/notebooks/example_train_nn.ipynb
+++ b/notebooks/example_train_nn.ipynb
@@ -15,7 +15,7 @@
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install \"torch>=1.10\" --index-url https://download.pytorch.org/whl/cu118\n",
-    "!{sys.executable} -m pip install cesnet_datazoo cesnet_models tqdm ipywidgets"
+    "!{sys.executable} -m pip install cesnet-datazoo cesnet-models tqdm"
    ]
   },
   {
@@ -244,7 +244,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Reuse neural network architecture from the `cesnet_models` package without using pre-trained weights, i.e., start the training from scratch."
+    "Reuse neural network architecture from the `cesnet-models` package without using pre-trained weights, i.e., start the training from scratch."
    ]
   },
   {
