--- a/notebooks/explore_data.ipynb
+++ b/notebooks/explore_data.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "# Explore data\n",
-    "First, install the `cesnet_datazoo` package."
+    "First, install the `cesnet-datazoo` package."
    ]
   },
   {
@@ -15,7 +15,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "!{sys.executable} -m pip install cesnet_datazoo"
+    "!{sys.executable} -m pip install cesnet-datazoo"
    ]
   },
   {
