--- a/notebooks/reproduce_tls.ipynb
+++ b/notebooks/reproduce_tls.ipynb
@@ -17,7 +17,7 @@
    "source": [
     "import sys\n",
     "!{sys.executable} -m pip install \"torch>=1.10\" --index-url https://download.pytorch.org/whl/cu118\n",
-    "!{sys.executable} -m pip install cesnet_datazoo cesnet_models tqdm"
+    "!{sys.executable} -m pip install cesnet-datazoo cesnet-models tqdm"
    ]
   },
   {
