Remove model.eval() calls

--- a/notebooks/reproduce_quic.ipynb
+++ b/notebooks/reproduce_quic.ipynb
@@ -45,8 +45,7 @@
     "from cesnet_models.models import MM_CESNET_V2_Weights, mm_cesnet_v2\n",
     "\n",
     "pretrained_weights = MM_CESNET_V2_Weights.CESNET_QUIC22_Week44\n",
-    "model = mm_cesnet_v2(weights=pretrained_weights, model_dir=\"models/\")\n",
-    "model.eval();"
+    "model = mm_cesnet_v2(weights=pretrained_weights, model_dir=\"models/\")"
    ]
   },
   {
