--- a/notebooks/reproduce_tls.ipynb
+++ b/notebooks/reproduce_tls.ipynb
@@ -45,8 +45,7 @@
     "from cesnet_models.models import MM_CESNET_V1_Weights, mm_cesnet_v1\n",
     "\n",
     "pretrained_weights = MM_CESNET_V1_Weights.CESNET_TLS22_WEEK40\n",
-    "model = mm_cesnet_v1(weights=pretrained_weights, model_dir=\"models/\")\n",
-    "model.eval();"
+    "model = mm_cesnet_v1(weights=pretrained_weights, model_dir=\"models/\")"
    ]
   },
   {
