Rename list with true labels

--- a/notebooks/example_evaluation.ipynb
+++ b/notebooks/example_evaluation.ipynb
@@ -313,9 +313,9 @@
     "    dataset.set_dataset_config_and_initialize(dataset_config)\n",
     "    test_df = dataset.get_test_df(flatten_ppi=True)\n",
     "    print(f\"Loaded {len(test_df)} test samples\")\n",
-    "    test_labels = test_df.pop(APP_COLUMN)\n",
+    "    true_labels = test_df.pop(APP_COLUMN)\n",
     "    preds = lgb_model.predict(test_df).argmax(axis=1)\n",
-    "    acc = accuracy_score(test_labels, preds)\n",
+    "    acc = accuracy_score(true_labels, preds)\n",
     "    per_week_acc.append(acc)\n",
     "    print(f\"Classification accuracy for {period} is {acc:.3f}\")\n",
     "\n",
@@ -344,9 +344,9 @@
     "    dataset_config = DatasetConfig(**common_params, test_period_name=date)\n",
     "    dataset.set_dataset_config_and_initialize(dataset_config)\n",
     "    test_df = dataset.get_test_df(flatten_ppi=True)\n",
-    "    test_labels = test_df.pop(APP_COLUMN)\n",
+    "    true_labels = test_df.pop(APP_COLUMN)\n",
     "    preds = lgb_model.predict(test_df).argmax(axis=1)\n",
-    "    acc = accuracy_score(test_labels, preds)\n",
+    "    acc = accuracy_score(true_labels, preds)\n",
     "    per_date_acc.append(acc)"
    ]
   },
