--- a/notebooks/example_train_nn.ipynb
+++ b/notebooks/example_train_nn.ipynb
@@ -376,17 +376,17 @@
     "\n",
     "def test(model: nn.Module, dataloader: DataLoader, device, progress: bool = False) -> float:\n",
     "    model.eval()\n",
-    "    test_labels = []\n",
+    "    true_labels = []\n",
     "    preds = []\n",
     "    with torch.no_grad():\n",
     "        for __, batch_ppi, batch_flowstats, batch_labels in tqdm(dataloader, total=len(dataloader), disable=not progress):\n",
     "            batch_ppi, batch_flowstats, batch_labels = batch_ppi.to(device), batch_flowstats.to(device), batch_labels.to(device)\n",
     "            out = model((batch_ppi, batch_flowstats))\n",
     "            batch_preds = out.argmax(dim=1)\n",
-    "            test_labels.append(batch_labels)\n",
+    "            true_labels.append(batch_labels)\n",
     "            preds.append(batch_preds)\n",
-    "    test_labels, preds = torch.cat(test_labels).cpu().numpy(), torch.cat(preds).cpu().numpy()\n",
-    "    return (test_labels == preds).mean()\n",
+    "    true_labels, preds = torch.cat(true_labels).cpu().numpy(), torch.cat(preds).cpu().numpy()\n",
+    "    return (true_labels == preds).mean()\n",
     "\n",
     "EPOCHS = 5\n",
     "train_dataloader = dataset.get_train_dataloader()\n",
