--- a/notebooks/reproduce_quic.ipynb
+++ b/notebooks/reproduce_quic.ipynb
@@ -147,21 +147,21 @@
     "\n",
     "def compute_model_predictions(model: nn.Module, test_dataloader: DataLoader, device) -> tuple[np. ndarray, np.ndarray]:\n",
     "    model.eval()\n",
-    "    test_labels = []\n",
+    "    true_labels = []\n",
     "    preds = []\n",
     "    with torch.no_grad():\n",
     "        for _, batch_ppi, batch_flowstats, batch_labels in tqdm(test_dataloader, total=len(test_dataloader)):\n",
     "            batch_ppi, batch_flowstats, batch_labels = batch_ppi.to(device), batch_flowstats.to(device), batch_labels.to(device)\n",
     "            out = model((batch_ppi, batch_flowstats))\n",
     "            batch_preds = out.argmax(dim=1)\n",
-    "            test_labels.append(batch_labels)\n",
+    "            true_labels.append(batch_labels)\n",
     "            preds.append(batch_preds)\n",
-    "    test_labels, preds = torch.cat(test_labels).cpu().numpy(), torch.cat(preds).cpu().numpy()\n",
-    "    return test_labels, preds\n",
+    "    true_labels, preds = torch.cat(true_labels).cpu().numpy(), torch.cat(preds).cpu().numpy()\n",
+    "    return true_labels, preds\n",
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "model = model.to(device)\n",
-    "test_labels, preds = compute_model_predictions(model, test_dataloader, device=device)"
+    "true_labels, preds = compute_model_predictions(model, test_dataloader, device=device)"
    ]
   },
   {
@@ -187,8 +187,8 @@
    "source": [
     "from sklearn.metrics import accuracy_score, recall_score\n",
     "\n",
-    "accuracy = accuracy_score(test_labels, preds)\n",
-    "recall = recall_score(test_labels, preds, average=\"macro\")\n",
+    "accuracy = accuracy_score(true_labels, preds)\n",
+    "recall = recall_score(true_labels, preds, average=\"macro\")\n",
     "print(f\"The pre-trained model achieved an accuracy of {accuracy:.5f} and a recall of {recall:.5f} on the test period {dataset_config.test_period_name} of the {dataset.name} dataset.\")"
    ]
   }
