Add note about installation of MIRAGE22

--- a/notebooks/cross_dataset_evaluation.ipynb
+++ b/notebooks/cross_dataset_evaluation.ipynb
@@ -255,6 +255,7 @@
     "tcbench datasets install --name mirage19\n",
     "tcbench datasets install --name mirage22\n",
     "```\n",
+    "The installation of the MIRAGE22 dataset can sometimes fail while generating the splits because it runs out of RAM (for a 32GB machine). A possible solution is installing this dataset on a remote machine with more RAM and downloading the parquet files.\n",
     "\n",
     "Check that all datasets are installed (data splits filled) with:\n",
     "```bash\n",
