Misc changes in cross_dataset_embedding_function.ipynb notebook

--- a/notebooks/cross_dataset_embedding_function.ipynb
+++ b/notebooks/cross_dataset_embedding_function.ipynb
@@ -317,7 +317,7 @@
     "    directions = np.where(row[\"pkts_dir\"] == 0, -1, 1)\n",
     "    sizes = row[\"pkts_size\"]\n",
     "    if is_utmobilenet:\n",
-    "        # For UTMOBILENET21, the time differences are already in the \"timetofirst\" column\n",
+    "        # For UTMOBILENET21, time differences are in the \"timetofirst\" column\n",
     "        time_differences = row[\"timetofirst\"].copy()\n",
     "    else:\n",
     "        time_differences = np.diff(row[\"timetofirst\"], prepend=0)\n",
@@ -836,8 +836,8 @@
     "\n",
     "device = torch.device(\"cuda:0\" if torch.cuda.is_available() else \"cpu\")\n",
     "embedding_model = embedding_model.to(device)\n",
-    "per_dataset_model_metrics: dict = defaultdict(lambda: {\"top1-acc\": [], \"top1-recall\": [], \"maj-acc\": [], \"maj-recall\": [], \"top1-f1\": [], \"maj-f1\": []})\n",
-    "per_dataset_baseline_metrics: dict = defaultdict(lambda: {\"top1-acc\": [], \"top1-recall\": [], \"maj-acc\": [], \"maj-recall\": [], \"top1-f1\": [], \"maj-f1\": []})\n",
+    "per_dataset_model_metrics: dict = defaultdict(lambda: {\"top1-acc\": [], \"top1-recall\": [], \"top1-f1\": [], \"maj-acc\": [], \"maj-recall\": [], \"maj-f1\": []})\n",
+    "per_dataset_baseline_metrics: dict = defaultdict(lambda: {\"top1-acc\": [], \"top1-recall\": [], \"top1-f1\": [], \"maj-acc\": [], \"maj-recall\": [],  \"maj-f1\": []})\n",
     "for dataset_name, dataset_enum in datasets.items():\n",
     "    print(f\"\\nProcessing dataset {dataset_name} with splits {SPLITS} (printing output for the first split)\")\n",
     "    for split_id in SPLITS:\n",
@@ -917,9 +917,9 @@
     "            baseline_maj_f1 = f1_score(test_labels, baseline_maj_vote, average=\"weighted\", zero_division=0)\n",
     "            per_dataset_baseline_metrics[dataset_name][\"top1-acc\"].append(baseline_top1_acc)\n",
     "            per_dataset_baseline_metrics[dataset_name][\"top1-recall\"].append(baseline_top1_recall)\n",
+    "            per_dataset_baseline_metrics[dataset_name][\"top1-f1\"].append(baseline_top1_f1)\n",
     "            per_dataset_baseline_metrics[dataset_name][\"maj-acc\"].append(baseline_maj_acc)\n",
     "            per_dataset_baseline_metrics[dataset_name][\"maj-recall\"].append(baseline_maj_recall)\n",
-    "            per_dataset_baseline_metrics[dataset_name][\"top1-f1\"].append(baseline_top1_f1)\n",
     "            per_dataset_baseline_metrics[dataset_name][\"maj-f1\"].append(baseline_maj_f1)\n",
     "            if split_id == 0: print(f\"Input space baseline top1-acc {baseline_top1_acc * 100:.2f}, maj-acc {baseline_maj_acc * 100:.2f}\")\n",
     "    # Average metrics across splits\n",
